--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "serverless-http": "^3.2.0"
+  },
+  "scripts": {
+    "build": "your-build-command",
+    "start": "node server.js"
   }
 }
