--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "netlify-cli": "^17.10.1",
     "serverless-http": "^3.2.0"
   },
   "scripts": {
-    "build": "your-build-command",
+    "build": "netlify deploy --prod",
     "start": "node server.js"
   }
 }
